--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Boolflix</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/flag-icon-css/6.6.6/css/flag-icons.min.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.2/css/all.css" integrity="sha384-lYWBc/iqSgl3vMKS9PDvO1AyZi8+zlSojOxx4U6v3UvYjZE6fXnKT+pjUZvOR0Nw" crossorigin="anonymous">
   </head>
   <body>
     <div id="app"></div>
